# WaveFunctionCollapse

./: CMakeList.txt  CMakeLists.txt
src/: main.cpp  wfc.cpp  wfc.h
src/color/: color.h  color_map.cpp  color_map.h
src/sample/: collection_samples.h  sample.h  sample_set.cpp  sample_set.h  tyle.cpp  tyle.h
